# misis2025s-3-chvikov_m_e

./: CMakeLists.txt  README.md
misis2025s-3-chvikov_m_e-main/prj.cw/: CMakeLists.txt  README.md  build_windows.bat  vcpkg.json
misis2025s-3-chvikov_m_e-main/prj.cw/src/: glcm.h  main.cpp
misis2025s-3-chvikov_m_e-main/prj.lab/: CMakeLists.txt
misis2025s-3-chvikov_m_e-main/prj.lab/lab1/src/: main.cpp
misis2025s-3-chvikov_m_e-main/prj.lab/lab2/include/: lab2.h
misis2025s-3-chvikov_m_e-main/prj.lab/lab2/lab2_test/: test_lab2.cpp
misis2025s-3-chvikov_m_e-main/prj.lab/lab3/lab3_test/: test_lab3.cpp
misis2025s-3-chvikov_m_e-main/prj.lab/lab3/src/: lab3.cpp
misis2025s-3-chvikov_m_e-main/prj.lab/lab4/: CMakeLists.txt
misis2025s-3-chvikov_m_e-main/prj.lab/lab5/: CMakeLists.txt
misis2025s-3-chvikov_m_e-main/prj.lab/lab5/include/: lab5.h
misis2025s-3-chvikov_m_e-main/prj.lab/lab6/: CMakeLists.txt
misis2025s-3-chvikov_m_e-main/prj.lab/lab6/lab6_test/: test_lab6.cpp
misis2025s-3-chvikov_m_e-main/prj.lab/lab6/src/: lab6.cpp  main.cpp
misis2025s-3-chvikov_m_e-main/prj.lab/lab7/: CMakeLists.txt
misis2025s-3-chvikov_m_e-main/prj.lab/lab7/include/: lab7.h
misis2025s-3-chvikov_m_e-main/prj.lab/lab7/lab7_test/: test_lab7.cpp
misis2025s-3-chvikov_m_e-main/prj.lab/lab7/src/: main.cpp
prj.cw/: README.md
prj.cw/examples/: test_image.pgm
prj.cw/src/: generate_test_images.cpp  glcm.cpp  glcm.h  main.cpp
prj.lab/: README.md
prj.lab/lab1/: CMakeLists.txt
prj.lab/lab1/include/: lab1.h
prj.lab/lab1/lab1_test/: test_lab1.cpp
prj.lab/lab1/src/: lab1.cpp
prj.lab/lab2/: CMakeLists.txt
prj.lab/lab3/: CMakeLists.txt
prj.lab/lab3/include/: lab3.h
prj.lab/lab3/src/: main.cpp
prj.lab/lab4/include/: lab4.h
prj.lab/lab4/src/: lab4_binarization_detection.cpp  main.cpp
prj.lab/lab5/src/: lab5.cpp
prj.lab/lab6/include/: lab6.h
prj.lab/lab7/src/: lab7.cpp
semcv/: CMakeLists.txt  semcv.cpp
semcv/include/: semcv.h
semcv/include/semcv/: semcv.hpp
